[gd_scene load_steps=25 format=2]

[ext_resource path="res://scenes/OpenFolder.gd" type="Script" id=1]
[ext_resource path="res://scenes/Add.gd" type="Script" id=2]
[ext_resource path="res://scenes/VersionSelect.gd" type="Script" id=3]
[ext_resource path="res://scenes/UpdateManager.gd" type="Script" id=4]
[ext_resource path="res://icons/alpha.res" type="Texture" id=5]
[ext_resource path="res://scenes/AddNew.gd" type="Script" id=6]
[ext_resource path="res://icons/paypal_donate.png" type="Texture" id=7]
[ext_resource path="res://icons/paypal_donate_hover.png" type="Texture" id=8]
[ext_resource path="res://scenes/Installed.gd" type="Script" id=9]
[ext_resource path="res://scenes/Donate.gd" type="Script" id=10]
[ext_resource path="res://theme/main.theme" type="Theme" id=11]
[ext_resource path="res://theme/round_and_shaded.stylebox" type="StyleBox" id=12]
[ext_resource path="res://scenes/NewsFeed.gd" type="Script" id=13]
[ext_resource path="res://icon.png" type="Texture" id=14]
[ext_resource path="res://scenes/UIScale.gd" type="Script" id=15]
[ext_resource path="res://scenes/RateLimit.gd" type="Script" id=16]
[ext_resource path="res://fonts/Dosis-SemiBold.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://scenes/UIDarkMode.gd" type="Script" id=18]

[sub_resource type="DynamicFont" id=3057]
size = 12
font_data = ExtResource( 17 )

[sub_resource type="StyleBoxFlat" id=3055]
bg_color = Color( 0.815686, 0.815686, 0.815686, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=3056]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 30.0
content_margin_bottom = 20.0
bg_color = Color( 0.921569, 0.921569, 0.921569, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.839216, 0.839216, 0.839216, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id=3054]

[sub_resource type="StyleBoxEmpty" id=3052]

[sub_resource type="StyleBoxEmpty" id=3053]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
theme = ExtResource( 11 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="HBox" type="HBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1090.0
margin_bottom = 624.0
custom_constants/separation = 10

[node name="MenuBar" type="VBoxContainer" parent="MarginContainer/HBox"]
margin_right = 329.0
margin_bottom = 604.0
rect_min_size = Vector2( 300, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
custom_constants/separation = 10

[node name="Include" type="HBoxContainer" parent="MarginContainer/HBox/MenuBar"]
margin_right = 329.0
margin_bottom = 25.0
hint_tooltip = "Select type of version to include"

[node name="Stable" type="CheckBox" parent="MarginContainer/HBox/MenuBar/Include"]
margin_right = 61.0
margin_bottom = 25.0
pressed = true
text = "Stable"

[node name="Alpha" type="CheckBox" parent="MarginContainer/HBox/MenuBar/Include"]
margin_left = 64.0
margin_right = 121.0
margin_bottom = 25.0
text = "Alpha"

[node name="Beta" type="CheckBox" parent="MarginContainer/HBox/MenuBar/Include"]
margin_left = 124.0
margin_right = 176.0
margin_bottom = 25.0
text = "Beta"

[node name="RC" type="CheckBox" parent="MarginContainer/HBox/MenuBar/Include"]
margin_left = 179.0
margin_right = 220.0
margin_bottom = 25.0
text = "RC"

[node name="Dev" type="CheckBox" parent="MarginContainer/HBox/MenuBar/Include"]
margin_left = 223.0
margin_right = 270.0
margin_bottom = 25.0
text = "Dev"

[node name="Mono" type="CheckBox" parent="MarginContainer/HBox/MenuBar/Include"]
margin_left = 273.0
margin_right = 329.0
margin_bottom = 25.0
text = "Mono"

[node name="Version&Refresh" type="HBoxContainer" parent="MarginContainer/HBox/MenuBar"]
margin_top = 35.0
margin_right = 329.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 50 )

[node name="VersionSelect" type="OptionButton" parent="MarginContainer/HBox/MenuBar/Version&Refresh"]
unique_name_in_owner = true
margin_right = 226.0
margin_bottom = 50.0
hint_tooltip = "Select a Godot version to download"
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Refresh to populate list"
align = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
refresh_button_path = NodePath("../Refresh")
download_button_path = NodePath("../../Download")
stable_button_path = NodePath("../../Include/Stable")
alpha_button_path = NodePath("../../Include/Alpha")
beta_button_path = NodePath("../../Include/Beta")
rc_button_path = NodePath("../../Include/RC")
dev_button_path = NodePath("../../Include/Dev")
mono_button_path = NodePath("../../Include/Mono")
rate_limit_path = NodePath("../../RateLimit")
desktop_entry_button_path = NodePath("../../AddDesktopEntry")

[node name="autoupdate" type="Timer" parent="MarginContainer/HBox/MenuBar/Version&Refresh/VersionSelect"]
wait_time = 300.0
one_shot = true

[node name="Refresh" type="Button" parent="MarginContainer/HBox/MenuBar/Version&Refresh"]
margin_left = 229.0
margin_right = 329.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 0 )
hint_tooltip = "Refreshes the database to show new available versions.
Hold SHIFT for full refresh if you think anything is missing.
"
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.01
text = "Refresh"

[node name="RateLimit" type="Label" parent="MarginContainer/HBox/MenuBar"]
unique_name_in_owner = true
margin_top = 95.0
margin_right = 329.0
margin_bottom = 117.0
mouse_filter = 1
custom_fonts/font = SubResource( 3057 )
align = 1
script = ExtResource( 16 )

[node name="AddDesktopEntry" type="CheckBox" parent="MarginContainer/HBox/MenuBar"]
margin_top = 127.0
margin_right = 329.0
margin_bottom = 152.0
pressed = true
text = "Add Desktop Entry"

[node name="Download" type="Button" parent="MarginContainer/HBox/MenuBar"]
margin_top = 162.0
margin_right = 329.0
margin_bottom = 222.0
rect_min_size = Vector2( 0, 60 )
hint_tooltip = "Download the selected version"
size_flags_horizontal = 3
text = "Download"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add" type="Button" parent="MarginContainer/HBox/MenuBar"]
margin_top = 232.0
margin_right = 329.0
margin_bottom = 282.0
rect_min_size = Vector2( 0, 50 )
hint_tooltip = "Add a custom version or another tool from an .exe"
size_flags_horizontal = 3
text = "Add version/project from file.."
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
add_popup = NodePath("../../../../AddNew")

[node name="Donate" type="TextureButton" parent="MarginContainer/HBox/MenuBar"]
visible = false
margin_top = 267.0
margin_right = 300.0
margin_bottom = 287.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 3
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenFolder" type="Button" parent="MarginContainer/HBox/MenuBar"]
margin_top = 292.0
margin_right = 329.0
margin_bottom = 317.0
hint_tooltip = "Add a custom version or another tool from an .exe"
size_flags_horizontal = 3
text = "Open Download Folder"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIOptions" type="HBoxContainer" parent="MarginContainer/HBox/MenuBar"]
margin_top = 327.0
margin_right = 329.0
margin_bottom = 354.0

[node name="UIScale" type="HBoxContainer" parent="MarginContainer/HBox/MenuBar/UIOptions"]
margin_right = 139.0
margin_bottom = 27.0
script = ExtResource( 15 )

[node name="Label" type="Label" parent="MarginContainer/HBox/MenuBar/UIOptions/UIScale"]
margin_right = 67.0
margin_bottom = 27.0
text = "UI SCALE:"

[node name="SpinBox" type="SpinBox" parent="MarginContainer/HBox/MenuBar/UIOptions/UIScale"]
margin_left = 70.0
margin_right = 139.0
margin_bottom = 27.0
min_value = 0.25
max_value = 3.0
step = 0.1
value = 0.25

[node name="UITheme" type="HBoxContainer" parent="MarginContainer/HBox/MenuBar/UIOptions"]
margin_left = 142.0
margin_right = 246.0
margin_bottom = 27.0
script = ExtResource( 18 )
main_node_path = NodePath("../../../../..")

[node name="Label" type="Label" parent="MarginContainer/HBox/MenuBar/UIOptions/UITheme"]
margin_right = 51.0
margin_bottom = 27.0
text = "Theme"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/HBox/MenuBar/UIOptions/UITheme"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 27.0
disabled = true
text = "Light"

[node name="LogoContainer" type="MarginContainer" parent="MarginContainer/HBox/MenuBar"]
unique_name_in_owner = true
margin_top = 364.0
margin_right = 329.0
margin_bottom = 567.0
hint_tooltip = "Click to go to releases webpage"
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 35
custom_constants/margin_top = 10
custom_constants/margin_left = 35
custom_constants/margin_bottom = 10

[node name="Panel" type="PanelContainer" parent="MarginContainer/HBox/MenuBar/LogoContainer"]
margin_left = 35.0
margin_top = 10.0
margin_right = 294.0
margin_bottom = 193.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 3055 )

[node name="HBox" type="VBoxContainer" parent="MarginContainer/HBox/MenuBar/LogoContainer/Panel"]
margin_right = 259.0
margin_bottom = 183.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Name" type="Label" parent="MarginContainer/HBox/MenuBar/LogoContainer/Panel/HBox"]
margin_right = 259.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Godot Version Manager"
align = 1

[node name="Logo" type="TextureRect" parent="MarginContainer/HBox/MenuBar/LogoContainer/Panel/HBox"]
margin_top = 30.0
margin_right = 259.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 14 )
expand = true
stretch_mode = 6

[node name="Copyright" type="Label" parent="MarginContainer/HBox/MenuBar/LogoContainer/Panel/HBox"]
margin_top = 133.0
margin_right = 259.0
margin_bottom = 183.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Copyright ©2022
Lisandro Lorea and Contributors"
align = 1

[node name="Version" type="HBoxContainer" parent="MarginContainer/HBox/MenuBar"]
unique_name_in_owner = true
margin_top = 577.0
margin_right = 329.0
margin_bottom = 604.0
size_flags_horizontal = 3
script = ExtResource( 4 )

[node name="tag" type="Label" parent="MarginContainer/HBox/MenuBar/Version"]
margin_right = 120.0
margin_bottom = 27.0
text = "Version Tag: vX.XX"

[node name="update" type="Button" parent="MarginContainer/HBox/MenuBar/Version"]
margin_left = 123.0
margin_right = 173.0
margin_bottom = 27.0
text = "Update"

[node name="req" type="HTTPRequest" parent="MarginContainer/HBox/MenuBar/Version"]

[node name="Installed" type="ItemList" parent="MarginContainer/HBox"]
unique_name_in_owner = true
margin_left = 339.0
margin_right = 699.0
margin_bottom = 604.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 10
custom_constants/line_separation = 10
custom_constants/icon_margin = 10
custom_constants/hseparation = 10
custom_styles/bg = SubResource( 3056 )
items = [ "Item 0", ExtResource( 5 ), false ]
allow_rmb_select = true
fixed_icon_size = Vector2( 64, 64 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
context_menu = NodePath("ContextMenu")

[node name="ContextMenu" type="PopupMenu" parent="MarginContainer/HBox/Installed"]
margin_right = 55.0
margin_bottom = 26.0
items = [ "Edit", null, 0, false, false, 0, 0, null, "", false, "Move Up", null, 0, false, false, 1, 0, null, "", false, "Move Down", null, 0, false, false, 2, 0, null, "", false, "Delete", null, 0, false, false, 3, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseOnLaunch" type="CheckButton" parent="MarginContainer/HBox/Installed"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -128.0
margin_bottom = 25.0
grow_horizontal = 0
custom_colors/font_color_pressed = Color( 0.27451, 0.54902, 0.74902, 1 )
custom_styles/focus = SubResource( 3054 )
text = "Close on launch"

[node name="Scroll" type="ScrollContainer" parent="MarginContainer/HBox"]
margin_left = 709.0
margin_right = 1070.0
margin_bottom = 604.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
script = ExtResource( 13 )

[node name="Feed" type="VBoxContainer" parent="MarginContainer/HBox/Scroll"]
margin_left = 10.0
margin_top = 10.0
margin_right = 351.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="Title" type="Label" parent="MarginContainer/HBox/Scroll/Feed"]
margin_right = 341.0
margin_bottom = 27.0
text = "godotengine.org news feed"
align = 1
uppercase = true

[node name="Loading" type="RichTextLabel" parent="MarginContainer/HBox/Scroll/Feed"]
visible = false
margin_top = 40.0
margin_right = 383.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 20 )
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 3052 )
custom_styles/normal = SubResource( 3053 )
bbcode_enabled = true
bbcode_text = "[center][wave]updating...[/wave][/center]"
text = "updating..."

[node name="req" type="HTTPRequest" parent="MarginContainer/HBox/Scroll"]

[node name="ModalBlur" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.126, 0.149433, 0.2, 0.784314 )

[node name="AddNew" type="Popup" parent="."]
unique_name_in_owner = true
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = -120.0
margin_right = 424.0
margin_bottom = 151.0
popup_exclusive = true
script = ExtResource( 6 )
select_dialog = NodePath("../SelectPath")
modal_blur = NodePath("../ModalBlur")

[node name="Panel" type="Panel" parent="AddNew"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 12 )

[node name="Margin" type="MarginContainer" parent="AddNew"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="AddNew/Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 555.0
margin_bottom = 251.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="AddNew/Margin/VBox"]
margin_right = 535.0
margin_bottom = 27.0
text = "Add new version or project.."
align = 1

[node name="path" type="HBoxContainer" parent="AddNew/Margin/VBox"]
margin_top = 30.0
margin_right = 535.0
margin_bottom = 57.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="AddNew/Margin/VBox/path"]
margin_right = 85.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Path"

[node name="LineEdit" type="LineEdit" parent="AddNew/Margin/VBox/path"]
margin_left = 88.0
margin_right = 432.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="AddVersionSelect" type="MenuButton" parent="AddNew/Margin/VBox/path"]
unique_name_in_owner = true
margin_left = 435.0
margin_right = 489.0
margin_bottom = 27.0
text = "[Select]"

[node name="Select" type="Button" parent="AddNew/Margin/VBox/path"]
margin_left = 492.0
margin_right = 535.0
margin_bottom = 27.0
text = "Load.."

[node name="name" type="HBoxContainer" parent="AddNew/Margin/VBox"]
margin_top = 60.0
margin_right = 535.0
margin_bottom = 87.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="AddNew/Margin/VBox/name"]
margin_right = 106.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Name"

[node name="LineEdit" type="LineEdit" parent="AddNew/Margin/VBox/name"]
margin_left = 109.0
margin_right = 535.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="arguments" type="HBoxContainer" parent="AddNew/Margin/VBox"]
margin_top = 90.0
margin_right = 535.0
margin_bottom = 117.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="AddNew/Margin/VBox/arguments"]
margin_right = 106.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Arguments"

[node name="LineEdit" type="LineEdit" parent="AddNew/Margin/VBox/arguments"]
margin_left = 109.0
margin_right = 535.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="Tip" type="Label" parent="AddNew/Margin/VBox"]
margin_top = 120.0
margin_right = 535.0
margin_bottom = 147.0
custom_colors/font_color = Color( 0.921569, 0.921569, 0.921569, 1 )
text = "Tip: to launch a project directly add to arguments: --path \"path/to/project_folder\""
autowrap = true

[node name="Add" type="Button" parent="AddNew/Margin/VBox"]
margin_top = 150.0
margin_right = 535.0
margin_bottom = 231.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Add"

[node name="Close" type="Button" parent="AddNew"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -25.0
margin_bottom = 25.0
hint_tooltip = "Close	"
text = "X"

[node name="SelectPath" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 128.0
margin_top = 75.0
margin_right = -128.0
margin_bottom = -75.0
rect_min_size = Vector2( 150, 52.5 )
popup_exclusive = true
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.exe ; Windows executable", "*.app ; OSX Application", "*.64,*.x86_64 ; Linux executable" )

[connection signal="toggled" from="MarginContainer/HBox/MenuBar/Include/Stable" to="MarginContainer/HBox/MenuBar/Version&Refresh/VersionSelect" method="_on_Stable_toggled"]
[connection signal="toggled" from="MarginContainer/HBox/MenuBar/Include/Alpha" to="MarginContainer/HBox/MenuBar/Version&Refresh/VersionSelect" method="_on_Alpha_toggled"]
[connection signal="toggled" from="MarginContainer/HBox/MenuBar/Include/Beta" to="MarginContainer/HBox/MenuBar/Version&Refresh/VersionSelect" method="_on_Beta_toggled"]
[connection signal="toggled" from="MarginContainer/HBox/MenuBar/Include/RC" to="MarginContainer/HBox/MenuBar/Version&Refresh/VersionSelect" method="_on_RC_toggled"]
[connection signal="toggled" from="MarginContainer/HBox/MenuBar/Include/Dev" to="MarginContainer/HBox/MenuBar/Version&Refresh/VersionSelect" method="_on_Dev_toggled"]
[connection signal="toggled" from="MarginContainer/HBox/MenuBar/Include/Mono" to="MarginContainer/HBox/MenuBar/Version&Refresh/VersionSelect" method="_on_Mono_toggled"]
[connection signal="refresh_finished" from="MarginContainer/HBox/MenuBar/Version&Refresh/VersionSelect" to="MarginContainer/HBox/MenuBar/Version&Refresh/VersionSelect" method="_on_VersionSelect_refresh_finished"]
[connection signal="version_added" from="MarginContainer/HBox/MenuBar/Version&Refresh/VersionSelect" to="MarginContainer/HBox/Installed" method="_on_version_added"]
[connection signal="timeout" from="MarginContainer/HBox/MenuBar/Version&Refresh/VersionSelect/autoupdate" to="MarginContainer/HBox/MenuBar/Version&Refresh/VersionSelect" method="_on_autoupdate_timeout"]
[connection signal="pressed" from="MarginContainer/HBox/MenuBar/Version&Refresh/Refresh" to="MarginContainer/HBox/MenuBar/Version&Refresh/VersionSelect" method="_on_Refresh_pressed"]
[connection signal="toggled" from="MarginContainer/HBox/MenuBar/AddDesktopEntry" to="MarginContainer/HBox/MenuBar/Version&Refresh/VersionSelect" method="_on_AddDesktopEntry_toggled"]
[connection signal="pressed" from="MarginContainer/HBox/MenuBar/Download" to="MarginContainer/HBox/MenuBar/Version&Refresh/VersionSelect" method="_on_Download_pressed"]
[connection signal="pressed" from="MarginContainer/HBox/MenuBar/Add" to="MarginContainer/HBox/MenuBar/Add" method="_on_Add_pressed"]
[connection signal="pressed" from="MarginContainer/HBox/MenuBar/Donate" to="MarginContainer/HBox/MenuBar/Donate" method="_on_Donate_pressed"]
[connection signal="pressed" from="MarginContainer/HBox/MenuBar/OpenFolder" to="MarginContainer/HBox/MenuBar/OpenFolder" method="_on_OpenFolder_pressed"]
[connection signal="value_changed" from="MarginContainer/HBox/MenuBar/UIOptions/UIScale/SpinBox" to="MarginContainer/HBox/MenuBar/UIOptions/UIScale" method="_on_SpinBox_value_changed"]
[connection signal="item_selected" from="MarginContainer/HBox/MenuBar/UIOptions/UITheme/OptionButton" to="MarginContainer/HBox/MenuBar/UIOptions/UITheme" method="_on_OptionButton_item_selected"]
[connection signal="gui_input" from="MarginContainer/HBox/MenuBar/LogoContainer" to="MarginContainer/HBox/MenuBar/Version" method="_on_LogoContainer_gui_input"]
[connection signal="pressed" from="MarginContainer/HBox/MenuBar/Version/update" to="MarginContainer/HBox/MenuBar/Version" method="_on_update_pressed"]
[connection signal="request_completed" from="MarginContainer/HBox/MenuBar/Version/req" to="MarginContainer/HBox/MenuBar/Version" method="_on_request_completed"]
[connection signal="item_activated" from="MarginContainer/HBox/Installed" to="MarginContainer/HBox/Installed" method="_on_Installed_item_activated"]
[connection signal="item_rmb_selected" from="MarginContainer/HBox/Installed" to="MarginContainer/HBox/Installed" method="_on_Installed_item_rmb_selected"]
[connection signal="id_pressed" from="MarginContainer/HBox/Installed/ContextMenu" to="MarginContainer/HBox/Installed" method="_on_ContextMenu_id_pressed"]
[connection signal="toggled" from="MarginContainer/HBox/Installed/CloseOnLaunch" to="MarginContainer/HBox/Installed" method="_on_CloseOnLaunch_toggled"]
[connection signal="about_to_show" from="AddNew" to="AddNew" method="_on_AddNew_about_to_show"]
[connection signal="popup_hide" from="AddNew" to="AddNew" method="_on_AddNew_popup_hide"]
[connection signal="version_added" from="AddNew" to="MarginContainer/HBox/Installed" method="_on_version_added"]
[connection signal="text_changed" from="AddNew/Margin/VBox/path/LineEdit" to="AddNew" method="_validate"]
[connection signal="text_entered" from="AddNew/Margin/VBox/path/LineEdit" to="AddNew" method="_validate"]
[connection signal="pressed" from="AddNew/Margin/VBox/path/Select" to="AddNew" method="_on_Select_pressed"]
[connection signal="text_changed" from="AddNew/Margin/VBox/name/LineEdit" to="AddNew" method="_validate"]
[connection signal="text_entered" from="AddNew/Margin/VBox/name/LineEdit" to="AddNew" method="_validate"]
[connection signal="text_changed" from="AddNew/Margin/VBox/arguments/LineEdit" to="AddNew" method="_validate"]
[connection signal="text_entered" from="AddNew/Margin/VBox/arguments/LineEdit" to="AddNew" method="_validate"]
[connection signal="pressed" from="AddNew/Margin/VBox/Add" to="AddNew" method="_on_Add_pressed"]
[connection signal="pressed" from="AddNew/Close" to="AddNew" method="_on_Close_pressed"]
